--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 7777",
+    "lint": "next lint",
     "build": "next build",
     "start": "next start",
     "export": "next build && next export",
@@ -22,6 +23,8 @@
     "@types/react": "17.0.11",
     "@types/styled-components": "^5.1.10",
     "babel-plugin-styled-components": "^1.12.0",
+    "eslint": "^7.29.0",
+    "eslint-config-next": "^11.0.0",
     "typescript": "4.3.4"
   }
 }
