--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "react-typed": "^1.2.0",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "typed.js": "^2.0.12"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
